# Nyxera-Eye

./: .env.example  .gitignore  COMPLIANCE.md  DISCLAIMER.md  Dockerfile.api  LICENSE  LICENSE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  lint.yml  (+3 more)
cmd/: README.md
configs/: README.md
deployments/: README.md
docs/: ARCHITECTURE.md  ARCHITECTURE_MIGRATION.md  COMPLIANCE.md  E2E_AUDIT.md  ETHICS.md  INFRA.md  ROADMAP.md  RUNBOOK.md  SECURITY_DISCLOSURE.md
frontend/: Dockerfile  README.md  package-lock.json  package.json  postcss.config.js  tailwind.config.ts
internal/: README.md
scripts/: check_architecture_paths.sh  e2e_full_validation.py  lint_repo.py
tests/: test_adversary.py  test_api.py  test_change_detection.py  test_collectors.py  test_command_center.py  test_compliance.py  test_device_fingerprint.py  test_fingerprinting.py  test_internal_asset_accumulator.py  test_internal_asset_api.py  test_internal_asset_repository.py  test_internal_coverage_api.py  test_internal_coverage_repository.py  test_internal_fingerprint_module.py  test_internal_intelligence_api.py  test_internal_investigation_api.py  test_internal_scan_coverage.py  test_internal_vendor_oui.py  test_internal_vulnerabilities.py  test_media.py  test_observability.py  test_ops_runtime.py  test_protocols.py  test_schema.py  test_security.py  test_tui.py  test_version.py  test_vision.py  test_vulnintel.py  test_web_coverage_panel.py  test_web_fingerprint_panel.py  test_web_investigation_page.py  test_workers.py
web/: README.md
(+178 files in other folders)
